# AnkiOCR

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  build_release.bat  pyproject.toml  pytest.ini  requirements.txt  run_ocr.py
anki_ocr/: __init__.py  api.py  config.json  config.md  gui.py  html_parser.py  main.py  meta.json  ocr.py  utils.py
anki_ocr/_vendor/: __init__.py
anki_ocr/_vendor/pytesseract/: pytesseract.py
docs/: AnkiWeb_README.html  create_standalone_tesseract_mac.sh
scripts/: build_release.bat  build_release.py  create_standalone_tesseract_mac.sh  run_ocr.py
src/anki_ocr/: __init__.py  api.py  config.json  config.md  gui.py  manifest.json  ocr.py  pytesseract.py  utils.py  version.py
src/anki_ocr/colorlog/: __init__.py  formatter.py  wrappers.py
tests/: multithreading_timing.py  test_api.py  test_ocr.py  test_performance.py  test_util.py
tests/testdata/annotated_imgs/: coronary_arteries.txt  different_font_sizes.txt  lazy_fox.txt  resp_tract_anatomy.txt
tests/testdata/batch_imgs/: imgs.txt
tests/testdata/test_collection/: collection.anki2
tests/testdata/test_collection/backups/: backup-2020-11-15-08.01.22.colpkg
tests/testdata/test_collection_template/: collection.anki2  collection.media.db2
